Fixed the overlapping charts

--- a/UK_Immigration/stylesheet.css
+++ b/UK_Immigration/stylesheet.css
@@ -34,6 +34,12 @@ svg {
     top: 180px;
 }
 
+select#stack_area_type {
+    position: absolute;
+    left: 2rem;
+}
+
+
 div.info {
     position: absolute;
     width: 290px;
